Kubernetes/Traefik+Cert-Manager/nginx-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  # CHANGE THIS from LoadBalancer to ClusterIP
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
