Kubernetes/Traefik+Cert-Manager/nginx-test/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx-cert2.local.simonlab.xyz`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx-cert2.local.simonlab.xyz`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-simonlab-xyz-tls
